--- a/localai-desktop/package.json
+++ b/localai-desktop/package.json
@@ -1,11 +1,17 @@
 {
   "name": "localai-desktop",
+  "main": "electron.main.ts",
+  "type": "module",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port 7311",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "electron:start": "ng build && electron .",
+    "electron:package": "ng build && electron-forge package",
+    "electron:make": "ng build && electron-forge make",
+    "lint": "ng lint",
     "test": "ng test"
   },
   "prettier": {
@@ -33,10 +39,11 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^20.0.0",
     "@angular/build": "^20.2.1",
     "@angular/cli": "^20.2.1",
     "@angular/compiler-cli": "^20.2.0",
-    "@electron-forge/cli": "7.9.0",
+    "@electron-forge/cli": "^7.9.0",
     "@types/jasmine": "~5.1.0",
     "electron": "38.1.2",
     "jasmine-core": "~5.9.0",
